--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 settings:
-  title: 'Status Page'
-  url: 'https://status-page.eidam.dev' # used for Slack messages
-  logo: logo-192x192.png # image in ./public/ folder
+  title: 'status.gookie.dev'
+  url: 'https://status.gookie.dev' # used for Slack message
+  logo: gg.png # image in ./public/ folder
   daysInHistogram: 90 # number of days you want to display in histogram
   collectResponseTimes: true # collects avg response times from CRON locations
 
@@ -15,25 +15,133 @@ settings:
   dayInHistogramNotOperational: ' incident(s)' # xx incident(s) recorded
 
 monitors:
-  - id: workers-cloudflare-com # unique identifier
-    name: workers.cloudflare.com
-    description: 'You write code. They handle the rest.' # default=empty
-    url: 'https://workers.cloudflare.com/' # URL to fetch
+  - id: proxmox # unique identifier
+    name: Proxmox
+    description: 'If this service is down, most services will be down as well.' # default=empty
+    url: 'https://statuscodeproxy.vercel.app/get/https/65.21.35.149/8006' # URL to fetch
     method: GET # default=GET
     expectStatus: 200 # operational status, default=200
-    followRedirect: false # should fetch follow redirects, default=false
+    followRedirect: true # should fetch follow redirects, default=false
     linkable: false # allows the title to be a link, default=true
 
-  - id: www-cloudflare-com
-    name: www.cloudflare.com
-    description: 'Built for anything connected to the Internet.'
-    url: 'https://www.cloudflare.com'
+  - id: npm
+    name: Nginx Proxy Manager
+    description: 'If the reverse proxy is down most URL's will be down as well.'
+    url: 'https://statuscodeproxy.vercel.app/get/http/51.158.62.196'
     method: GET
     expectStatus: 200
-    linkable: true # allows the title to be a link, default=true
+    linkable: false # allows the title to be a link, default=true
 
-  - id: blog-cloudflare-com
-    name: The Cloudflare Blog
-    url: 'https://blog.cloudflare.com/'
+    - id: scp
+    name: SCP
+    description: 'If the status code proxy is down, most services will be down as well.'
+    url: 'https://statuscodeproxy.vercel.app/'
+    method: GET
+    expectStatus: 200
+    linkable: false # allows the title to be a link, default=true
+
+  - id: gauth
+    name: gAuth
+    url: 'https://statuscodeproxy.vercel.app/get/http/65.21.35.149/4409'
+    method: GET
+    expectStatus: 401
+    linkable: false 
+
+  - id: cloud
+    name: Cloud
+    url: 'https://statuscodeproxy.vercel.app/get/http/65.21.35.149/4402'
+    method: GET
+    expectStatus: 200
+    followRedirect: true
+    linkable: false 
+
+  - id: code
+    name: Code Server
+    url: 'https://statuscodeproxy.vercel.app/get/http/65.21.35.149/4404'
+    method: GET
+    expectStatus: 200
+    linkable: false 
+
+  - id: jellyfin
+    name: Jellyfin
+    url: 'https://statuscodeproxy.vercel.app/get/http/65.21.35.149/8096'
+    method: GET
+    expectStatus: 200
+    linkable: false 
+
+  - id: protainer
+    name: Portainer
+    url: 'https://statuscodeproxy.vercel.app/get/http/65.21.35.149/4406'
+    method: GET
+    expectStatus: 200
+    linkable: false 
+
+  - id: apigookiedev
+    name: api.gookie.dev
+    url: 'https://api.gookie.dev'
+    method: GET
+    expectStatus: 200
+
+  - id: bloggookiedev
+    name: blog.gookie.dev
+    url: 'https://blog.gookie.dev'
+    method: GET
+    expectStatus: 200
+
+  - id: cdngookiedev
+    name: cdn.gookie.dev
+    url: 'https://cdn.gookie.dev'
+    method: GET
+    expectStatus: 200
+
+  - id: cloudgookiedev
+    name: cloud.gookie.dev
+    url: 'https://cloud.gookie.dev/index.php/s/Ns6DRbBiZre3rR7'
+    method: GET
+    followRedirect: true
+    expectStatus: 200
+
+  - id: debridgookiedev
+    name: debrid.gookie.dev
+    url: 'https://debrid.gookie.dev'
+    method: GET
+    followRedirect: true
+    expectStatus: 200
+
+  - id: debridgookiedevauth01
+    name: debridauth.gookie.dev
+    url: 'https://debridauth.gookie.dev/'
+    method: GET
+    followRedirect: true
+    expectStatus: 401
+
+  - id: drivegookiedev
+    name: drive.gookie.dev
+    url: 'https://drive.gookie.dev'
+    method: GET
+    expectStatus: 200
+
+  - id: jellyfingookiedev
+    name: jellyfin.gookie.dev
+    url: 'https://jellyfin.gookie.dev'
+    method: GET
+    followRedirect: true
+    expectStatus: 200
+
+  - id: npmgookiedev
+    name: npm.gookie.dev
+    url: 'https://npm.gookie.dev'
+    method: GET
+    expectStatus: 200
+
+  - id: proxmoxgookiedev
+    name: proxmox.gookie.dev
+    url: 'https://proxmox.gookie.dev'
+    method: GET
+    expectStatus: 200
+
+  - id: proxygookiedev
+    name: proxy.gookie.dev
+    url: 'https://proxy.gookie.dev'
     method: GET
     expectStatus: 200
