--- a/config.yaml
+++ b/config.yaml
@@ -15,64 +15,11 @@ settings:
   dayInHistogramNotOperational: ' incident(s)' # xx incident(s) recorded
 
 monitors:
-  - id: proxmox # unique identifier
-    name: Proxmox
-    description: 'If this service is down, most services will be down as well.' # default=empty
-    url: 'https://statuscodeproxy.vercel.app/get/https/65.21.35.149/8006' # URL to fetch
+  - id: workers-cloudflare-com # unique identifier
+    name: gookie.com
+    description: 'You write code. They handle the rest.' # default=empty
+    url: 'https://workers.cloudflare.com/' # URL to fetch
     method: GET # default=GET
     expectStatus: 200 # operational status, default=200
-    followRedirect: true # should fetch follow redirects, default=false
-    linkable: false # allows the title to be a link, default=true
-
-  - id: npm
-    name: Nginx Proxy Manager
-    description: 'If the reverse proxy is down most URL's will be down as well.'
-    url: 'https://statuscodeproxy.vercel.app/get/http/51.158.62.196'
-    method: GET
-    expectStatus: 200
-    linkable: false # allows the title to be a link, default=true
-
-  - id: scp
-    name: SCP
-    description: 'If the status code proxy is down, most services will be down as well.'
-    url: 'https://statuscodeproxy.vercel.app/'
-    method: GET
-    expectStatus: 200
-    linkable: false # allows the title to be a link, default=true
-
-  - id: gauth
-    name: gAuth
-    url: 'https://statuscodeproxy.vercel.app/get/http/65.21.35.149/4409'
-    method: GET
-    expectStatus: 401
-    linkable: false 
-
-  - id: cloud
-    name: Cloud
-    url: 'https://statuscodeproxy.vercel.app/get/http/65.21.35.149/4402'
-    method: GET
-    expectStatus: 200
-    followRedirect: true
-    linkable: false 
-
-  - id: code
-    name: Code Server
-    url: 'https://statuscodeproxy.vercel.app/get/http/65.21.35.149/4404'
-    method: GET
-    expectStatus: 200
-    linkable: false 
-
-  - id: jellyfin
-    name: Jellyfin
-    url: 'https://statuscodeproxy.vercel.app/get/http/65.21.35.149/8096'
-    method: GET
-    expectStatus: 200
-    linkable: false 
-
-  - id: protainer
-    name: Portainer
-    url: 'https://statuscodeproxy.vercel.app/get/http/65.21.35.149/4406'
-    method: GET
-    expectStatus: 200
-    linkable: false 
-
+    followRedirect: false # should fetch follow redirects, default=false
+    linkable: false # should the titles be links to the service, default=true
