--- a/config.yaml
+++ b/config.yaml
@@ -32,7 +32,7 @@ monitors:
     expectStatus: 404
     linkable: false # allows the title to be a link, default=true
 
-  - id: npm
+  - id: npmm
     name: Reverse Proxy 2
     description: 'If the reverse proxy is down most URLs will be down as well.'
     url: 'https://statuscodeproxy.vercel.app/get/http/107.189.5.69'
@@ -68,20 +68,6 @@ monitors:
     url: 'https://statuscodeproxy.vercel.app/get/http/65.109.157.154/4409'
     method: GET
     expectStatus: 401
-    linkable: false 
-
-  - id: iptvproxyz
-    name: IPTV
-    url: 'https://iptv.cinehub.wf/'
-    method: GET
-    expectStatus: 200
-    linkable: false 
-
-  - id: jellyfin
-    name: Jellyfin
-    url: 'https://statuscodeproxy.vercel.app/get/http/65.109.157.154/8096'
-    method: GET
-    expectStatus: 302
     linkable: false 
 
   - id: protainer
@@ -133,19 +119,6 @@ monitors:
   - id: drivegookiedev
     name: drive.gookie.dev
     url: 'https://drive.gookie.dev'
-    method: GET
-    expectStatus: 200
-
-  - id: jellyfingookiedev
-    name: jellyfin.gookie.dev
-    url: 'https://jellyfin.gookie.dev'
-    method: GET
-    followRedirect: true
-    expectStatus: 200
-
-  - id: npmgookiedev
-    name: npm.gookie.dev
-    url: 'https://npm.gookie.dev'
     method: GET
     expectStatus: 200
 
